Enhance README with usage and project details
Expanded README with detailed usage instructions, class hierarchy, and relationship to Project Leyden.